--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1"
+    "eslint-plugin-promise": "^4.3.1",
+    "husky": "^5.1.3",
+    "lint-staged": "^10.5.4"
   }
 }
