--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Twitch Bot",
   "main": "src/index.js",
   "scripts": {
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.js",
+    "build": "sucrase ./src -d ./dist --transforms imports",
     "lint": "eslint --fix src/**/*.js",
     "postinstall": "husky install"
   },
@@ -29,6 +32,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "husky": "^5.1.3",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^10.5.4",
+    "nodemon": "^2.0.7",
+    "sucrase": "^3.17.1"
   }
 }
