--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/w2rs/lara#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "dyn-require": "0.0.4",
     "tmi.js": "^1.7.5"
   },
   "devDependencies": {
